--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@use './tailwind.css';
+@use "primeicons/primeicons.css";
+
+/* Global font: Montserrat (imported in index.html) */
+* {
+  font-family: "Open Sans", sans-serif !important;
+  font-weight: 300;
+}
+
+/* Add global utility classes or component styles here if needed */
