--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -86,7 +86,16 @@
 
                         <div class="flex justify-center">
                             <div class="bg-amber-700 h-40 w-full rounded">
+                                <div class="flex justify-start">
+                                    <div class="bg-yellow-200 rounded m-2">
+                                        Relaxing
+                                    </div>
 
+                                    <div class="bg-green-200 rounded m-2">
+                                        Chill
+                                    </div>
+
+                                </div>
                             </div>
                         </div>
                         <div class="flex justify-between">
